syntax = "proto3";
package interface;

// speed type
message Speed {
    float value = 1;
}

// pedestrian type
message Pedestrian {
    float distance = 1;
}

enum Braking {
    URGENT_BRAKE = 0;
    SOFT_BRAKE = 1;
    NO_BRAKE = 2;
}

// the input part of the interface
message Input {
    double timestamp = 1;

    oneof message {
        Speed speed = 2;
        Pedestrian pedestrian_l = 3;
        Pedestrian pedestrian_r = 4;
    }
}

// the output part of the interface
message Output {
    Braking brakes = 1;
}

// the service interface
service AEB {
    rpc run(stream Input) returns (stream Output);
}
